--- a/_posts/2019-10-29-IO模型阅读笔记.md
+++ b/_posts/2019-10-29-IO模型阅读笔记.md
@@ -23,7 +23,7 @@ tags: I/O模型 阅读笔记
 
 商场排队吃饭，只能老实排队不能做其它事情（排队过程即是阻塞的）。餐厅直接把餐准备好了你直接享用。  
 
-![阻塞I/O]()
+![阻塞I/O](https://github.com/smakry/smakry.github.io/raw/master/imags/%E9%98%BB%E5%A1%9EIO.png)
 
 应用进程发起后，内核没有数据返回时，应用进程一直阻塞等到内核返回数据。  
 
@@ -31,7 +31,7 @@ tags: I/O模型 阅读笔记
 
 商场吃饭取个号，但是要`时常的去看下`到你了没有。号到了之后也需要自己去取餐。  
 
-![非阻塞I/O]()  
+![非阻塞I/O](https://github.com/smakry/smakry.github.io/raw/master/imags/%E9%9D%9E%E9%98%BB%E5%A1%9EIO.png)  
 
 应用进程轮循（polling）调用recvfrom，待内核准备好数据调用，当内核没准备好返回EWOULDBLOCK。一直检测数据是否准备好。
 
@@ -39,7 +39,7 @@ tags: I/O模型 阅读笔记
 
 商场吃饭取了多个号，其中一个号到了就会通知你。同样也需要自己去取餐。
 
-![I/O多路复用]()    
+![I/O多路复用](https://github.com/smakry/smakry.github.io/raw/master/imags/IO%E5%A4%9A%E8%B7%AF%E5%A4%8D%E7%94%A8.png)    
 
 Linux I/O复用有`select poll epoll三组系统调用方式`，进程通过将`一个或者多个`文件描述符（fd，File Descriptor）传递给select poll epoll中的一种系统调用，通过系统调用检测fd是否处于就绪状态（数据是否准备好）。  
 
@@ -50,7 +50,7 @@ Linux I/O复用有`select poll epoll三组系统调用方式`，进程通过将`
 
 商场吃饭取了号，直到号到了会直接通知你，不用主动去查看号是否到了，需要自己去取餐。
 
-![信号驱动I/O]()  
+![信号驱动I/O](https://github.com/smakry/smakry.github.io/raw/master/imags/%E4%BF%A1%E5%8F%B7%E9%A9%B1%E5%8A%A8IO.png)  
 
 应用程序`不用阻塞在那傻等`到系统数据准备好再调用，也`不用一直循环`（轮循，polling）在去检测系统是否准备好数据。只需要通过`sigaction系统调用`，待系统准备好数据就会为产生一个`SIGIO信号`，并回调应用程序`注册的信号回调函数`，应用程序就可以在`回调函数里面系统调用recvfrom获取数据`。  
 
@@ -58,10 +58,12 @@ Linux I/O复用有`select poll epoll三组系统调用方式`，进程通过将`
 
 不需要到商场吃饭了，直接点个外卖，等待上菜的时间也省了，餐厅直接把菜送到你家。  
 
-![异步I/O]()
+![异步I/O](https://github.com/smakry/smakry.github.io/raw/master/imags/%E5%BC%82%E6%AD%A5IO.png)
 
 异步I/O是系统通知我们何时I/O`完成`了可以取数据，而信号驱动I/O是通知何时`开始`I/O操作。
 
 ### <span id = "list_5"></span>I/O模型对比  
 
-![五种I/O对比]()
+![五种I/O对比](https://github.com/smakry/smakry.github.io/raw/master/imags/%E4%BA%94%E7%A7%8DIO%E5%AF%B9%E6%AF%94.png)  
+
+<https://blog.csdn.net/gui951753/article/details/82348485>  
