--- a/_posts/2019-10-29-IO模型阅读笔记.md
+++ b/_posts/2019-10-29-IO模型阅读笔记.md
@@ -17,7 +17,12 @@ tags: I/O模型 阅读笔记
 - [异步I/O](#list_4)
 - [I/O模型对比](#list_5)
 
-程序由数据+指令构成，指令操作数据存在输入（Input）输出（Output），linux中一切看做文件（硬件设备也可看做文件）。类比钓鱼：一次完整的钓鱼（IO）操作，鱼（文件）从池塘（磁盘）中转移（拷贝）到鱼篓（用户空间）的过程。以下是Linxu（UNIX）操作系统的5种IO
+---
+
+- 同步：所有的操作都完成了，才`统一呈现`  
+- 异步：操作放入到消息队列，慢慢做，但是`放入后系统就已经响应`你，‘先呈现部分’  
+
+程序由数据+指令构成，指令操作数据存在输入（Input）输出（Output），linux中一切看做文件（硬件设备也可看做文件）。IO操作`根据设备分为内存IO、网络IO和磁盘IO`。`IO操作都是由系统内核调用`来完成，`系统调用通过cpu来调度`。`cpu快，IO慢，协调2者就出现了IO模型`。IO举例类比钓鱼：一次完整的钓鱼（IO）操作，鱼（文件）从池塘（磁盘）中转移（拷贝）到鱼篓（用户空间）的过程。以下是Linxu（UNIX）操作系统的5种IO
 
 ### <span id = "list_0"></span> 1.阻塞式I/O
 
