--- a/_posts/2019-10-29-进程间通信.md
+++ b/_posts/2019-10-29-进程间通信.md
@@ -11,7 +11,7 @@ tags: 进程间通信 阅读笔记
 ## 目录  
 
 - [管道pipe](#list_1)
-
+- [Socket套接字](#list_2)
 
 ---
 
@@ -19,7 +19,7 @@ tags: 进程间通信 阅读笔记
 
 #### 创建进程  
 
-- Linux系统创建进程的方式有2种，由`操作系统创建`，还有就是`由父进程创建`（通常是子进程）。系统调用fork()创建一个新进程，vfork()也可创建，但vfork()实际也是调用fork（）函数。  
+- Linux系统创建进程的方式有2种，由`操作系统创建`，还有就是`由父进程创建`（通常是子进程）。系统调用fork()创建一个新进程，vfork()也可创建，但vfork()实际也是调用fork()函数。  
 - 调用fork()之后，父进程和子进程的`执行顺序是我们无法确定`（CPU调度）  
 - 创建进程成功后，父子进程都从`fork()之后开始执行`，只是pid不同，fork()成功之后，子进程获取到了父进程的`所有变量、环境变量、程序计数器的当前空间和值`（进程重新开辟了空间，这些变量的当前值拷贝）  
 - 创建进程：
@@ -185,6 +185,100 @@ int main(){
         - 管道已满，write阻塞
         - 管道未满，write将数据写入，并返回实际写入的字节数  
 
+#### 有名管道（在此之前描述的都是无名管道）  
+
+管道的不足就是没有名字只能在有血缘关系的进程间通信，有名管道赋予管道名字实现在`不同进程之间（没有血缘关系）`通信。有名管道的实现是以FIFO（fisrt in first out）的文件形式存储于文件系统（管道文件）。这个文件是以先进先出的方式流动读写。Linux下创建有名管道的可以使用`mknod和mkfifo命令`，还有就是通过`系统函数`：
+int mkfifo(const char *pathname, mode_t mode);  
+int mknod(const char *pathname, mode_t mode, dev_t dev);  
+
+```cpp
+//写进程
+#include<iostream>
+#include<stdio.h>
+
+int main(){
+    FILE* out_file;
+    int count = 1;
+    char buf[80];
+
+    out_file = fopen("mypipe","w");
+    if(out_file == NULL){
+        std::cout << "file open err" << std::endl;
+        exit(1);
+    }
+
+    sprintf(buf,"this is test data for the name pipe for example\n");
+    fwrite(buf,1,80,out_file);
+    fclose(out_file);
+
+    return 1;
+}
 
 
-<https://blog.csdn.net/qq_42914528/article/details/82023408>
+```
+
+
+```cpp
+//写进程
+#include<iostream>
+#include<stdio.h>
+
+int main(){
+    FILE* in_file;
+    int count = 1;
+    char buf[80];
+
+    in_file = fopen("mypipe","r");
+    if(in_file == NULL){
+        std::cout << "fileopen err" << std::endl;
+        exit(1);
+    }
+
+    while((count = fread(buf,1,80,in_file)) > 0){
+        std::cout << buf << std::endl;
+        fclose(in_file);
+    }
+
+    return 1;
+}
+
+```
+
+<https://blog.csdn.net/qq_42914528/article/details/82023408>  
+
+
+### <span id = "list_2"></span> Socket套接字（实现在不同机器间的通信）  
+
+#### 网络中进程如何通信  
+
+网络中通信需解决与哪台主机哪个进程进行通信：  
+
+- 标识唯一主机：本地是通过pid标识，网络中TCP/IP协议族的网络层`“IP地址”可以唯一标识网络中的主机`  
+- 标识唯一进程：网络中传输层的`“协议+端口”可以唯一标识主机中的应用程序（进程）`，因此利用三元组（IP地址、协议、端口）就可以标识网络的进程。
+#### Socket通信  
+
+Socket利用三元组【IP地址、协议、端口】进行网络通信，socket是解决网络通信的一个中间件工具。函数原型：  
+
+int socket(int domain, int type, int protocol);
+  
+- domain或者说af地址族（Address Family），就是IP地址类型，常用的AF_INET和AF_INET6（INET是Internet简写）  
+- type为数据传输方式，常用的有SOCK_STREAM（TCP，例如网页采用这种）和SOCK_DGRAM(UDP，例如QQ视频采用这种)
+- protocol表示传输协议，常用的有IPPROTO_TCP（TCP）和IPPROTO_UDP（UDP）
+- 返回值：文件描述符fd标识该sockt  
+- socket创建成功后`分配两个缓冲区`（I/O模型）：输入缓冲区和输出缓冲区  
+    - I/O缓冲区在`每个`TCP套接字中`单独存在`
+    - I/O缓冲区创建套接字后`自动生成`
+    - 关闭套接字`输出`缓冲区的数据会`继续`传输
+    - 关闭套接字`输入`缓冲区数据会`丢失` 
+
+![socket中TCP三次握手]()
+
+![socket中TCP四次挥手]()
+
+listen()函数让套接字进入`被动监听状态（唤醒套接字）`，此时还没有接收请求  
+accept()函数接收客户端请求，此时`程序阻塞执行`（后面代码不能被执行），知道有新的请求  
+
+
+<https://www.jianshu.com/p/066d99da7cbd>
+<https://www.cnblogs.com/clschao/articles/9585555.html>
+<https://blog.csdn.net/liuxingen/article/details/44995467>
