--- a/_posts/2019-10-29-进程间通信.md
+++ b/_posts/2019-10-29-进程间通信.md
@@ -271,9 +271,9 @@ int socket(int domain, int type, int protocol);
     - 关闭套接字`输出`缓冲区的数据会`继续`传输
     - 关闭套接字`输入`缓冲区数据会`丢失` 
 
-![socket中TCP三次握手]()
+![socket中TCP三次握手](https://github.com/smakry/smakry.github.io/raw/master/imags/socket%E4%B8%ADTCP%E4%B8%89%E6%AC%A1%E6%8F%A1%E6%89%8B.png)
 
-![socket中TCP四次挥手]()
+![socket中TCP四次挥手](https://github.com/smakry/smakry.github.io/raw/master/imags/socket%E4%B8%ADTCP%E5%9B%9B%E6%AC%A1%E6%8C%A5%E6%89%8B.png)
 
 listen()函数让套接字进入`被动监听状态（唤醒套接字）`，此时还没有接收请求  
 accept()函数接收客户端请求，此时`程序阻塞执行`（后面代码不能被执行），知道有新的请求  
