--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -52,7 +52,7 @@ tags: 笔记
 - [实现一个简单String注意事项](#list_40)
 - [构造函数的变量初始化顺序](#list_41)
 - [C++四种类型转换](#list_42)
-
+- [SQL多字段去重](#list_43)
 
 --- 
 
@@ -1443,4 +1443,19 @@ int main(){
 
     return 0;
 }
+```  
+
+### <span id = "list_43"></span> SQL多字段去重
+
+取出去重后的集合，在从原有的集合中去掉结果集
+
+```sql
+create table if not exists mytb(
+	id int,
+	pid int,
+	coin int,
+	primary key(id)
+);
+
+delete a.* from mytb a,(select min(id) as id,pid,coin from mytb group by pid,coin) b where a.pid = b.pid and a.coin = b.coin and a.id > b.id;
 ```
