--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -1447,8 +1447,6 @@ int main(){
 
 ### <span id = "list_43"></span> SQL多字段去重
 
-取出去重后的集合，在从原有的集合中去掉结果集
-
 ```sql
 create table if not exists mytb(
 	id int,
@@ -1457,5 +1455,18 @@ create table if not exists mytb(
 	primary key(id)
 );
 
+####取出去重后的集合，在从原有的集合中去掉结果集
 delete a.* from mytb a,(select min(id) as id,pid,coin from mytb group by pid,coin) b where a.pid = b.pid and a.coin = b.coin and a.id > b.id;
+
+
+####mysql版本问题，使用临时表处理
+create table if not exists mytb2(
+	id int,
+	pid int,
+	coin int
+);
+insert into mytb2(id,pid,coin) select min(id),pid,coin from mytb group by pid,coin;
+delete mytb.* from mytb a,mytb2 b where a.pid = b.pid and a.coin = b.coin and a.id > b.id;
+drop table if exists mytb2;
+
 ```
