--- a/_posts/2019-10-31-线程同步.md
+++ b/_posts/2019-10-31-线程同步.md
@@ -14,4 +14,11 @@ tags: 线程同步 阅读笔记
 
 ---
 
+单核通过线程切换（每个任务完成一点切换一个线程）实现并发，真正的并发是在多核CPU上，同时执行多个任务（`硬件并发`）。单核需要保存CPU的状态和指令指针，算出切换哪个任务，再重新加载CPU状态（`额外的开销`所以单核多线程的花费总时间会比线程各自执行总时间更高）。并发使用的目的`任务拆分`和`提高性能`。
+
+- 任务拆分：程序划分不同的任务，每个线程执行一个或者多个任务，逻辑简单
+- 提高性能：
+    - 任务并行：`拆分`任务`并行执行`减少时间（并行复杂不一定能做到时间降低）  
+    - 数据并行：每个线程`不同的数据`上执行`相同的操作`  
+
 ### <span id = "list_0"></span> 多线程  
