--- a/_posts/2019-09-24-C++STL.md
+++ b/_posts/2019-09-24-C++STL.md
@@ -146,7 +146,7 @@ int main(){
 最大堆：上一层的节点都比下面的所有层数的节点`大`  
 最小堆：上一层的节点都比下面的所有层数的节点`小`  
 
-### <span id = "list_4"></span>哈希、哈希表、哈希函数和哈希冲突  
+### <span id = "list_4"></span>哈希、哈希表、哈希函数、哈希冲突和一致性哈希  
 
 1. Hash（散列、杂凑或者音译为哈希）：把`任意长度的输入`（又叫做预映射）通过`散列算法``变成固定长度`的输出。  
 2. 哈希表（Hash Table，散列表）：根据关键值（Key Value）直接进行访问的`数据结构`（存放记录的`数组`）。  
@@ -189,6 +189,10 @@ int main(){
 3.**双重散列**（Double Hashing）：建立多个哈希函数，第1次哈希出现冲突再次用`另外的`哈希函数散列
 
 <https://www.jianshu.com/p/dbe7a1ea5928>
+
+#### 一致性哈希（分布式应用中）
+ 
+<https://www.jianshu.com/p/e968c081f563>
 
 ### <span id = "list_3000"></span>C++set源码分析  
 
