--- a/_posts/2019-09-05-缓存阅读笔记.md
+++ b/_posts/2019-09-05-缓存阅读笔记.md
@@ -13,14 +13,14 @@ tags: 缓存 阅读笔记
 
 狭义的缓存：指的是`CPU缓存`（CPU与内存之间的临时存储器，容量比内存小得多但是交互速率比内存快很多，CPU缓存`协调CPU高速运算与内存大容量`），先从CPU缓存中找，未找到再到相对慢的内存中读取，同时把数据块调入缓存中，后续不用再调用内存。（静态随机存取存储器（Static Random-Access Memory,SRAM）,静态只要通电数据就能恒常保持）  
 
-![存储器层次结构]()
+![存储器层次结构](https://github.com/smakry/smakry.github.io/raw/master/imags/%E5%AD%98%E5%82%A8%E5%99%A8%E5%B1%82%E6%AC%A1%E7%BB%93%E6%9E%84.png)
 
 广义的缓存：二者之间速率相差大的，`协调二者差异的结构`都可称缓存。  
 
 
 Web应用架构一般有如下几层（不同层级之间都可以存在缓存）：  
 
-![常用web架构]()  
+![常用web架构](https://github.com/smakry/smakry.github.io/raw/master/imags/%E5%B8%B8%E7%94%A8web%E6%9E%B6%E6%9E%84.png)  
 
 - 数据库加上缓存，减少文件系统I/O
 - 应用程序加上缓存，减少对数据库的查询
