lambda shared_ptr

--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -53,6 +53,8 @@ tags: 笔记
 - [构造函数的变量初始化顺序](#list_41)
 - [C++四种类型转换](#list_42)
 - [SQL多字段去重](#list_43)
+- [C++11中Lambda表达式](#list_44)
+- [C++智能指针](#list_45)
 
 --- 
 
@@ -1469,4 +1471,115 @@ insert into mytb2(id,pid,coin) select min(id),pid,coin from mytb group by pid,co
 delete mytb.* from mytb a,mytb2 b where a.pid = b.pid and a.coin = b.coin and a.id > b.id;
 drop table if exists mytb2;
 
-```
+```  
+
+### <span id = "list_44"></span> C++11中Lambda表达式  
+
+使用STL往往会大量使用到函数对象，需要编写很多函数对象类，有的`函数对象类只用来定义一个对象，而且这个对象也只使用一次`，编写这样的函数类就有点浪费，同时`定义和使用可能间隔较远`，代码阅读困难，使用lambda可以减少对象类的数量，使得程序更加优雅。  
+C++11对匿名函数支持，称为lambda函数（也叫lambda表达式），把`函数看做对象`。lambda表达式可以像对象一样使用，比如可以将它们赋给变量和作为参数传递，还可以像函数一样对其求值。具体形式：  
+
+[capture] (parameters)mutable -> return_type{statement}  
+例如：  
+[] (int a,int b) -> int {return a + b;};  
+
+- [capture]：捕捉列表，总是出现在lambda表达式开始处，事实上[]是lambda引出符，编译器根据该引出符判断接下来的代码是否是lambda函数，捕捉列表能够`捕捉上下文中的变量供lambda函数使用`(必须有)  
+- (parameters)：参数列表，与普通函数参数列表一致，如果不需要参数传递，可以连同括号()一起省略  
+- mutable：mutable修饰符，默认情况下，lambda函数总是一个`const函数`，mutable可以取消其常用性，在使用该修饰符时，参数列表不可省略（即使参数为空）  
+- ->return_type：返回类型，用追踪返回类型形式声明函数返回类型，不需要返回值的时候可以连同符号->一起省略。返回类型明确的情况下，也可以省略，让编译器推导  
+- {statement}：函数体，同普通函数一样，`除了可以使用参数外还可以使用捕捉的变量`（函数体必须有可以空）  
+
+
+在lambda表达式可以访问当前作用域的变量，这是lambda表达式的闭包（closure）行为。c++变量传递值传递和引用传递可以通过前面的[]来指定：  
+- []:没有定义任何变量，使用未定义变量会引发错误
+- [x,&y]：x以值传递，y以引用传递
+- [&]：任何被使用到的外部变量都隐式地以引用传递
+- [=]：任何被使用到的外部变量都隐式地以值传递
+- [&,x]：除x使用值传递外，其余都是引用传递
+- [=,&z]：除z使用引用传递外，其余都是值引用
+- [this]：对于[=]或[&]可以直接使用this，但是[]空类型要使用this必须显示的传入  
+
+```cpp
+#include <iostream>
+using namespace std;
+
+class Test{
+public:
+    void hello(){
+        cout << "test hello!\n";
+    };
+    void lambda(){
+        auto fun = [this]{ // 捕获了 this 指针
+        this->hello(); 
+        }; // 这里 this 调用的就是 class Test 的对象了
+        fun();
+    }
+};
+
+int main(){
+    // 定义一个简单的lambda表达式
+    auto basicLamda = [] {cout << "hello world!" << endl; };
+    basicLamda();  // 调用
+    // 如果需要参数，那么就要像函数那样，放在圆括号里面，如果有返回值，返回类型要放在->后面，即拖尾返回类型
+    // 当然你也可以忽略返回类型，lambda会帮你自动推断出返回类型
+    auto add = [](int a, int b) -> int {return a + b; };
+    int result = add(4, 5);
+    cout << "result = " << result << endl;
+    // 自动推断出返回类型
+    auto multiply = [](int a, int b) {return a * b; };
+    int result1 = multiply(5, 6);
+    cout << "result1 = " << result1 << endl;
+    // 1、什么也不捕获，或者是故意不用 Lambda 函数外部的变量
+    int  i = 1024;
+    // auto f = []{cout << "i = " << i << endl; }; 报错!应该使用了lambda函数外部的变量
+    auto f = [=] { cout << "i = " << i << endl; };  // 使用传值的方式使用外lambda函数外部的变量i
+    f();  // 调用函数
+    // 2、引用捕捉
+    int i1 = 666;
+    cout << "变量i1的引用: " << &i1 << endl;
+    auto f1 = [&] { cout << "变量i1的引用: " << &i1 << endl; };
+    f1();
+    // 3、复制并引用捕获
+    int i2 = 777, j2 = 888;
+    cout << "i2 = " << i2 << endl;
+    cout << "j2 = " << j2 << endl;
+    auto f2 = [=, &i2] { cout << "i2 = " << &i2 << " ,j2 = " << &j2 << endl; };  // 默认拷贝外部所有变量，但引用变量i2
+    f2();
+    // 4、指定引用或复制
+    int i3 = 444, j3 = 555;
+    cout << "外部变量i3 = " << i3 << " i3的地址是: " << &i3 << endl;
+    auto f3 = [i3] { cout << "内部变量i3 = " << i3 << " i3的地址是: " << &i3 << endl; };
+    f3();
+    // 5、捕获this指针
+    Test t;
+    t.lambda();
+    return 0;
+}
+  
+```  
+
+
+### <span id = "list_45"></span> C++智能指针  
+
+智能指针内存管理要解决的根本问题是：`一个堆对象，在被多个对象引用时，如何释放资源的问题`  
+
+#### shared_ptr
+智能指针的内部实现：  
+- 最终实现是`两个指针`成员：一个指向数据成员，一个指向计数器成员
+- 智能指针里的计数器维护的是一个指针，指向实际内存在对删，不是栈上的
+
+#### weak_ptr  
+
+是一种`不控制`所指向对象生命周期的智能指针，它`指向一个shared_ptr管理的对象`。weak_ptr绑定到shared_ptr时`不会改变对象的引用计数`。当`shared_ptr被销毁时，指向的对象也被销毁，不论weak_ptr是否指向它`。  
+
+用途：不影响智能指针所指向对象的生命周期时，`判断对象是否存在（`使用lock方法），从而避免访问一个不存在的对象。  
+
+#### unique_ptr
+
+一个unique_ptr`拥有`它指向的对象。与shared_ptr不同的，某个时刻只能有一个unique_ptr指向一个给定对象，当unique_ptr被销毁时，它所指向的对象也被销毁。unique_ptr不支持普通的拷贝和赋值操作，但可以通过release or reset来转移所有权。  
+
+用途：管理一些对象不需要被共享，但也希望能够在`超出作用域时，自动释放资源`。  
+
+#### 循环引用计数问题  
+
+<https://www.jianshu.com/p/11389ccbcf79>  
+<https://blog.csdn.net/daniel_ustc/article/details/23096229>
