lambda shared_ptr

--- a/_posts/2019-09-19-程序问题整合.md
+++ b/_posts/2019-09-19-程序问题整合.md
@@ -397,7 +397,7 @@ malloc/free和new/delete都可以用来动态分配内存
 char * strcpy ( char * destination, const char * source ); //返回值是指向destination的指针  
 void * memcpy ( void * destination, const void * source, size_t num ); //Copy block of memory（`复制内存块`），void*表示不确定类型的指针  
 
-char * strncpy ( char * destination, const char * source, size_t num ); 
+char * strncpy ( char * destination, const char * source, size_t num );   
 void * memset ( void * ptr, int value, size_t num ); //Fill block of memory（内存块前num用value填充，value转化为unsigned char）  
 
 - strcpy只能用于复制字符串，memcpy可以用来复制任意的内容  
@@ -943,7 +943,7 @@ set的`底层实现方式为红黑树`。内部实现中set不同于map是key-va
 
 ### <span id = "list_29"></span>构造函数和析构函数能否为虚函数  
 
-1.构造函数不可以是虚函数：虚函数要求每个对象都有指向虚函数表的指针，对象都还没有被构造好就存在这个指针  
+1.构造函数不可以是虚函数：虚函数要求每个对象都有指向虚函数表的指针，对象都还没有被构造好就不存在这个指针  
 2.析构函数可以是虚函数：当基类指针指向了子类对象，如果析构函数不是虚函数，那么此时释放的只是基类的内存，无法调用到子类的析构函数，子类内存无法释放，此时出现内存泄露  
 
 ### <span id = "list_30"></span>指针和引用的区别  
@@ -1004,7 +1004,7 @@ int main(){
 
 2.**限制作用域**：普通的全局变量和函数，其作用域为整个程序或者项目，外部文件可以通过extern关键字访问该变量和函数。static的变量和函数的`作用域只有当前文件`（但文件被include的头文件中的变量和函数声明就被包含到一份文件里面了），其它文件不能访问到（不同文件就可以声明一样的静态变量）。  
 
-3.**唯一性**：C++中类的static成员变量和static成员函数是`属于类，不属于任意一个对象`，所有对象共享。static成员变量必须在类外定义且只能被初始化一次。static又是类的成员跟方法，所以可以通过类对象访问，也可以通过类本身访问（只属于类）。static函数只能访问static的成员及函数，不能方位非static的成员或函数（static在编译期，在有对象之前，同时static是没有隐藏的this指针）。  
+3.**唯一性**：C++中类的static成员变量和static成员函数是`属于类，不属于任意一个对象`，所有对象共享。static成员变量必须在类外定义且只能被初始化一次。static又是类的成员跟方法，所以可以通过类对象访问，也可以通过类本身访问（只属于类）。static函数只能访问static的成员及函数，不能访问非static的成员或函数（static在编译期，在有对象之前，同时static是没有隐藏的this指针）。  
 
 ### <span id = "list_33"></span>如果叫你设计函数strcpy需要考虑哪些问题  
 
