--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -13,6 +13,13 @@ tags: GO 阅读笔记
 > 内存管理、数组安全、编译迅速
 
 ## Go笔记
+
+- GOPATH目录可以是任意的，唯一的要求是`不能是你安装Go的目录`  
+<https://studygolang.com/articles/5936>  
+
+- linux下git  
+<https://blog.csdn.net/qq_42303254/article/details/89230332>
+
 ### 变量
 - `:=`省略var，左侧没有`声明新的变量`，产生编译错误（常用于初始化声明）
 
