--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -14,11 +14,19 @@ tags: GO 阅读笔记
 
 ## Go笔记
 
+Go强类型化的语言，具有垃圾回收机制，并显示支持并编程，Go原生地支持Unicode，可以处理所有国家的语言  
+<https://github.com/golang/go/wiki/NonEnglish>  
+
 - GOPATH目录可以是任意的，唯一的要求是`不能是你安装Go的目录`  
-<https://studygolang.com/articles/5936>  
+<https://go-zh.org/doc/code.html>  
 
 - linux下git  
 <https://blog.csdn.net/qq_42303254/article/details/89230332>
+
+go游戏框架  
+<https://github.com/liangdas/mqant/wiki>
+
+- import “()”里的导入顺序最终会被gofmt工具按照字母顺序表进行排序
 
 ### 变量
 - `:=`省略var，左侧没有`声明新的变量`，产生编译错误（常用于初始化声明）
@@ -71,7 +79,7 @@ l=24
 ```
 
 ### 运算
-- go`不支持前++`
+- go`不支持前++`，i++是一种语句，而非表达式（不同于C族语言，`j = i++ 是不合法的`）
 
 ### select语句（随机版switch）
 - select随机一个可运行的case，可运行退出
