--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -52,7 +52,7 @@ continue|for		|import	|return		|var
 - 内置的预声明的常量、类型和函数  
 常量：true	false	iota	nil  
 
-类型：  
+类型：（byte=uint8，rune=int32）  
 int		|int8	|int16		|int32	|int64  
 uint	|uint8	|uint16		|uint32	|uint64	|uintptr  
 float32	|float64|complex64	|complex128  
@@ -62,14 +62,23 @@ bool	|byte	|rune		|string	|error
 make	|len	|cap	|**new**	|append	|copy	|close	|delete	  
 complex	|real	|imag	|panic	|recover  
 
-- 包里函数外的全局函数，`大写开头的函数其它包可见`，包名总是小写字母组成  
-- 函数调用可在声明之前，函数和其它包级别的实体可以以`任意次序`声明  
+- 包里函数外的全局函数，`大写开头的函数其它包可见`（导出的，type类型同规则），包名总是小写字母组成  
+- 函数调用可在声明之前，函数和其它`包级别`的实体可以以`任意次序`声明（变量类似）  
+
+```go
+//包级别
+var a = b + c //包级别的这种方式是正确的，最后a = 3
+var b = 1
+var c = 2
+
+```  
 - map是一个使用make创建的数据结构的`引用`（变量别名）  
 - GO有escape analysis，在编译期，它会分析你的变量是否在函数执行完毕那一刻，程序有没有可能有别的对象引用到它（所谓逃逸，`逃逸的在堆上分配`），如果没有，那这个变量就可以在栈上分配，完全不经过gc。如果它已经逃逸了，那什么时候gc就由不得你了。(go build 加上-gcflags='-m'会显示escape内容)<https://blog.csdn.net/weixin_42117918/article/details/82024667>
     - 对于`包一级声明的变量`来说，它们的`生命周期和整个程序的运行周期一致`；
-    - 而`局部变量`生命周期则是`动态`的：每次从创建一个新变量的声明语句开始，直到该变量`不再被引用为止`，然后变量的存储空间`可能`被回收。
+    - 而`局部变量`生命周期则是`动态`的：每次从创建一个新变量的声明语句开始，直到该变量`不再被引用为止`(不可访问)，然后变量的存储空间`可能`被回收。
 - 字符串变量声明方式  
 - 初始值对于类型的零值（数值是0；布尔值是false；字符串是""；对于接口和引用类型（slice、指针、map、通道、函数）是nil；对于像数组或结构体这样的符合类型，零值是其所有元素或成员的零值），go里面不存在未初始化变量    
+- doc.go文件对包的文档注释
 
 ```go
 s := "" //常用于函数内局部变量（常用）  
@@ -81,7 +90,73 @@ var s string = "" //显示变量类型
 - func (t Time) Second() int{} //Time类型的一个方法Second()  
 - 当一个goroutine试图在一个通道上进行发送或者接收操作时，它会`阻塞`，直到另一个goruntine试图进行接收或者发送操作才传递值（读写锁？）  
 - switch中case从上到下推演，但是default可以放到任何位置  
-- go`指针不支持算术运算`
+- go`指针不支持算术运算`  
+- 额外的bool结果：  
+v,ok = m[key] //map查询  
+v,ok = x.(T) //类型断言  
+v,ok = <-ch //通道接收  
+
+- T(x)`将值x转成T类型`，T类型与x具有相同的底层类型或者二者都指向相同底层类型的未命名指针则二者可以转换；通过==和<等比较操作符，命名类型（type的类型）的值可以与其相同类型的值或者底层类型相同的未命名类型的值相比较，但是不同命名类型的值不能直接比较：  
+
+```go
+type TypeA float64
+type TypeB float64
+
+var a TypeA
+var b TypeB
+var c TypeA
+fmt.Println(a == b) //编译错误，不同的命名类型
+fmt.Println(a == 0) //true（a类型转换int(a)，底层类型变成int与0的底层类型相同）
+fmt.Println(a == c) //true相同的命名类型
+```  
+
+- 包初始化？？？
+- 作用域问题（同样规则运用于switch）：  
+
+```go
+func f()int{
+    return 15;
+}
+
+func main(){
+    if x := f();x < 10 {
+        fmt.Printf("xx")
+    } else if x < 15 { //x也在作用域内
+
+        fmt.Printf("%d",x)
+    } else {
+        fmt.Printf("world:%d",x)
+    }
+
+    fmt.Printf("world:%d",x) //此处x是未定义，不在作用域内
+}
+
+```
+
+- int不等同于int32，uint不等同uint32（在特定平台是相等的，或者是该平台上的运算效率最高的值，但不同硬件平台或者不同编译器大小是不一定的）
+- go中取模余数的正负号总是与被除数一致（-5%3和-5%-3都是-2）  
+- &^操作符，按位将右边二进制1的位在左边出现的置0   
+- 十进制下，float32有效小数大约6位，float64小数大约15位。绝大多数情况下应优先选用float64，float32能精确表示的正整数范围有限：  
+
+```go
+var f float32 = 16777211
+fmt.Println(f == f + 1)  //结果false
+
+var f2 float32 = 1 << 24 //只能精确到1<<24
+fmt.Println(f2 == f2 + 1) //结果true  
+
+nan := math.NaN()
+fmt.Println(nan == nan,nan < nan,nan > nan) //"false false false"比较总是不成立
+```
+
+- go的bool值只有true和false，0和1不能隐式转成false和true，反之也不行  
+- 字符串可以追加`不能修改`如 s := "left foot" 可以 s += ",right foot" 但s[0] = 'L'编译错误。不能重赋值，代表原始串的字串可以共用原始串的内存地址（不需要重新分配内存） 
+- Printf格式化字符含多个%谓词，原本要求提供相应数量的操作数，而%后的副词[1]告知Printf重复使用第1个操作数，其次副词#告知Printf输出相应的前缀  
+
+```go
+o := 0666
+fmt.Printf("%d %#o %#[2]x\n",o,o) //重复使用第2个操作数
+```
 
 ### 变量
 - `:=`省略var，左侧没有`声明新的变量`，产生编译错误（常用于初始化声明）
@@ -101,7 +176,8 @@ var(
 )
 ````
 
-- 局部变量声明未使用编译错误，全局变量声明未使用是允许的
+- 局部变量声明未使用编译错误，全局变量声明未使用是允许的  
+
 
 ### 常量
 - iota常量（可被编译器修改的常量），`const出现iota重置为0`。const`语句块中每行+1`
