--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -40,6 +40,7 @@ verb | 描述
 %q		 |带引号字符串（如"ABC"）或者字符（如'C'）  
 %v		 |内置格式的任何值  
 %T		 |任何值的类型  
+%p		 |指针，十六进制表示，前缀0x  
 %%		 |百分号本身（无操作数）  
 
 -go关键字
@@ -216,13 +217,91 @@ const(
 	ZiB // 1180591620717411303424
 	YiB // 1208925819614629174706176
 )
-```
+```  
 
+- init执行顺序根据import然后再当前包按顺序（当前包可以有多个init）  
+- tree dir (linux查看dir的目录树，省略dir即当前目录)  
+- 函数调用，参数都会创建一个副本（指针除外，不同于其它语言的引用），这样就会拷贝一次值
 - q := [...]int{1,2,3}省略号“...”出现在数组长度的位置，表示输出长度由初始化的元素个数决定    
 - r := [...]int{9:-1} 定义10个数据，最后一个数据的值是-1，其余默认值0。由最大的index决定
-- 数组是可以比较（数据类型跟元素个数一致的情况下才能比较，比较的是元素值。不同类型或不同元素个数比较会编译错误）  
-- init执行顺序根据import然后再当前包按顺序（当前包可以有多个init）  
-- tree dir (linux查看dir的目录树，省略dir即当前目录)
+- 数组是可以比较（`数据类型`跟`元素个数`一致的情况下才能比较，比较的是元素值。不同类型或不同元素个数比较会编译错误）  
+- 切片slice有3个属性指针、长度和容量。（切片，即可视作是数组的一个`子片的引用`）
+    - 指针是指向该切片的第1个元素（`并非底层的数组的首元素`）
+    - 长度是指slice中元素个数，不能超过slice的容量，内置函数len获取
+    - 容量即切片的起始位置到底层数组的最后一个元素间元素个数，内置函数cap获取
+    - s := []int{0,1,2}与 s := [...]int{0,1,2}注意二者区别`[]表示切片`，`[...]表示的是数组`类型不同；`切片不能通过==等来比较`，标准库有bytes.Equal来比较字节切片（[]byte）,其余的比较需自己实现   
+    - 判断slice是不是为空不能用== nil因为 s = []int{}用== nil返回是false但实际是空，需用len() == 0判定  
+    - make([]T,len,cap) 和make([]T,cap)[:len]二者等价（注意cap位置）  
+    - append方式类似c++中verctor的动态扩容方式（`内存地址变化了`）  
+
+```go
+arr := [...]string{"Sunday","Monday","Tuesday","Wednesday","Thursday","Firday","Saturday","",""}
+
+work := arr[1:5]
+
+fmt.Println(work[0],len(work),cap(work))
+fmt.Printf("%T\n",work)
+
+/*输出
+Monday 4 8
+[]string
+*/
+
+//上面的基础
+day := work[:10] //day切片引用从work切片的第1个元素"Monday"后10个，报错超出了work切片的容量8（可以理解原始的容量不足以作为day的引用）
+
+fmt.Println(len(day),cap(day)) //报错
+```
+
+- map
+    - map的`键类型必须是可以通过操作符==来进行比较的数据类型`，虽然浮点型可以，但是浮点存在数据有效范围如float32只能精确到1<<24。
+    - map中ages["bob"] = ages["bob"] + 1 //当键bob不在map中，这是安全的，`键不存在查找返回的是类型的零值`
+    - map`元素`不是一个变量（map类型本身是一个变量），不可以获取它的地址如 _ = &ages["bob"] //编译错误  
+    - map中元素迭代是顺序是随机的，取决于散列算法，若需要有序迭代，需通过排序key  
+
+
+```go
+var graph = make(map[string]map[string]bool) //map的元素是map
+
+func addEdge(from,to string) {
+    edges := graph[from]
+    if edges == nil {
+        edges = make(map[string]bool)
+        graph[from] = edges
+    }
+    edges[to] = true
+}
+
+func hasEdge(from,to string) bool {
+    return graph[from][to] //当from跟to都不存在的时候，这个调用依然是安全的（键不存在查找返回的是类型零值）
+}
+
+fmt.Printf("%T,%[1]q,%T",graph["sdf"],graph["sdf"]["ssss"]) //结果：map[string]bool,map[],bool
+
+```
+
+- linux结束符ctrl + d
+- “.”同样适用于结构体相当于其它语言的“->”
+
+```go
+type employee struct {
+    id int
+    name string
+}
+
+func main(){
+    var n1 employee
+    n1.id = 1
+
+    var n2 *employee = &n1
+    (*n2).id = 2
+	n2.id = 12 //与(*n2).id等价的
+
+    fmt.Println(n1.id,n2.id) //12 12
+}
+	
+```
+
 
 ### 变量
 - `:=`省略var，左侧没有`声明新的变量`，产生编译错误（常用于初始化声明）
