--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -97,7 +97,8 @@ v,ok = m[key] //map查询
 v,ok = x.(T) //类型断言  
 v,ok = <-ch //通道接收  
 
-- T(x)`将值x转成T类型`，T类型与x具有相同的底层类型或者二者都指向相同底层类型的未命名指针则二者可以转换；通过==和<等比较操作符，命名类型（type的类型）的值可以与其相同类型的值或者底层类型相同的未命名类型的值相比较，但是不同命名类型的值不能直接比较：  
+- T(x)`将值x转成T类型`，T类型与x具有相同的底层类型或者二者都指向相同底层类型的未命名指针则二者可以转换；通过==和<等
+- 操作符，命名类型（type的类型）的值可以与其相同类型的值或者底层类型相同的未命名类型的值相比较，但是不同命名类型的值不能直接比较：  
 
 ```go
 type TypeA float64
@@ -221,7 +222,7 @@ const(
 
 - init执行顺序根据import然后再当前包按顺序（当前包可以有多个init）  
 - tree dir (linux查看dir的目录树，省略dir即当前目录)  
-- 函数调用，参数都会创建一个副本（指针除外，不同于其它语言的引用），这样就会拷贝一次值
+- 函数调用，参数都会创建一个副本（不同于其它语言的引用），这样就会拷贝一次值（`指针、slice、map函数和通道channel也是值拷贝`，只是包含了引用类型或者是可以通过包含的类型修改实参值。例如slice包含指向底层数组的指针，这就能改变到底层数组）
 - q := [...]int{1,2,3}省略号“...”出现在数组长度的位置，表示输出长度由初始化的元素个数决定    
 - r := [...]int{9:-1} 定义10个数据，最后一个数据的值是-1，其余默认值0。由最大的index决定
 - 数组是可以比较（`数据类型`跟`元素个数`一致的情况下才能比较，比较的是元素值。不同类型或不同元素个数比较会编译错误）  
@@ -251,6 +252,50 @@ Monday 4 8
 day := work[:10] //day切片引用从work切片的第1个元素"Monday"后10个，报错超出了work切片的容量8（可以理解原始的容量不足以作为day的引用）
 
 fmt.Println(len(day),cap(day)) //报错
+```
+
+
+- slice作为函数参数是值传递,但可通过切片的底层数组地址进行修改原始数组，但当切片容量长度发生变化就有差别（修改函数外的切片，可通过返回新的切片赋值或者传递指针） 
+
+```go
+func main(){
+    s1 := []int{1,2,3,4,5,6,7}
+
+	s1 = append(s1[:3],s1[4:]...) //切片s1重新赋值只有原始切片的6个长度
+	fmt.Printf("%d,%d,%d,%p\n",s1,len(s1),cap(s1),s1) //[1 2 3 5 6 7],6,7,0xc00001e080
+}
+
+```
+
+```go
+func test(slice []int) {
+    slice = append(slice[:3],slice[4:]...) //未超出底层数组的长度，没有重新内存分配
+}
+
+func main(){
+    s1 := []int{1,2,3,4,5,6,7}
+
+    test(s1) //test没有重新分配内存，修改到了原始数组，
+			//但是s1在test之外并没有变化，还是指向原始的切片,所以切片还是长度7，2个元素7
+    fmt.Printf("%d,%d,%d,%p\n",s1,len(s1),cap(s1),s1) //[1 2 3 5 6 7 7],7,7,0xc00001e080
+}
+
+```  
+
+```go
+func test(slice []int) {
+    slice = append(slice[:3],slice[1:]...) //超出底层数组的长度，重新内存分配
+}
+
+func main(){
+    s1 := []int{1,2,3,4,5,6,7}
+
+    test(s1) //test重新分配内存，没有修改到了原始数组，
+			//但是s1在test之外并没有变化，还是指向原始的切片,所以切片还是长度7
+    fmt.Printf("%d,%d,%d,%p\n",s1,len(s1),cap(s1),s1) //[1 2 3 4 5 6 7],7,7,0xc00001e080
+
+}
+
 ```
 
 - map
@@ -302,6 +347,180 @@ func main(){
 	
 ```
 
+- 结构体
+    - 结构体是否能比较取决于结构体成员变量是否都能够比较
+    - 结构体的匿名成员变量（只需要指定变量类型，不需要显示的指定变量名称），访问成员时可以直接通过一级的索引访问（匿名看做把成员变量的成员变量全部提升一级到结构体中，`展开`）；匿名成员有隐式的名字所以`不能同时存在2个相同类型的匿名变量`（冲突了都指向同一个）  
+    - 结构体类型可导出，结构体匿名成员若是不可导出的（小写开头），那么引用包不能通过.成员变量的方式访问（因为成员是不可导出），但是可通过匿名的方式访问（因为结构体本身是可导出的，展开就能访问到）
+
+```go
+type Point struct{
+	X,Y int
+}
+
+type Circle struct{
+	Point //只指定了Point类型没有实际的名称，此时就相当于展开Point类型,但也可以通过类型访问
+	Radius int
+}
+
+var c Circle
+c.X = 10 //匿名展开
+c.Point.X = 10 //匿名未展开，2种方式是一致的
+```
+
+- vim多行注释  
+:20,30 s/^/#/g 第20到30行用 # 注释掉。  
+:20,30 s/^#//g 取消注释  
+:4,10 s/^[^I ]\+// 去掉行首的空白字符  
+用 . 表示当前行。  
+:.,30 s/^/#/g  
+
+- json
+    - func Marshal(v interface{}) ([]byte, error) //go类型转成json
+    - func MarshalIndent(v interface{}, prefix, indent string) ([]byte, error) //按照格式转成json
+    - func Unmarshal(data []byte, v interface{}) error //json转成go类型  
+    - `成员标签定义`（转成json后，成员对应转化）  
+
+```go
+package main
+
+import(
+    "fmt"
+    "encoding/json"
+    "log"
+)
+
+type Movie struct {
+    Title   string
+    Year    int     `json:"released,string"` //成员标签定义，Year字段用released替换，且类型替换为string
+    Color   bool    `json:"color,omitempty"` //成员标签定义，Color字段用color替换，omitempty表示bool类型可以忽略空
+    Actors  []string
+}
+
+func main(){
+    var movies = []Movie{
+        {Title:"t1",Year:1854,Color:false,
+            Actors:[]string{"Husdf","fsdfs"}},
+        {Title:"t2",Year:1842,Color:true,
+            Actors:[]string{"Husdf","fsdfs"}},
+        {Title:"t3",Year:1842,Color:false,
+            Actors:[]string{"Husdf","fsdfs"}},
+    }
+
+    data,err := json.MarshalIndent(movies,"","  ")
+    if err != nil {
+        log.Fatalf("sfderro")
+    }
+
+    fmt.Printf("%s\n",data)
+}
+
+```
+
+- 格式化输出文本模板和HTML模板（以下是文本模板，HTML同样是格式化为可解析html的）,html模板可用来防止注入攻击（按照格式化生成，防止重新解析）
+
+```go
+package main
+
+import(
+    "fmt"
+    "encoding/json"
+    "net/http"
+    "net/url"
+    "strings"
+    "time"
+    "text/template"
+    "log"
+    "os"
+)
+
+const IssuesURL = "https://api.github.com/search/issues"
+
+//注意printf后有空格，使用的是“`”不是单引号
+const temp1 = `{{.TotalCount}} issues:
+{{range.Items}}------------------------
+Number: {{.Number}}
+User:   {{.User.Login}}
+Title:  {{.Title | printf "%.64s"}}
+Age:    {{.CreatedAt | daysAgo}} days
+{{end}}`
+
+var mytmp = template.Must(template.New("report").Funcs(template.FuncMap{"daysAgo" : daysAgo}).Parse(temp1))
+
+type IssuesSearchResult struct {
+    TotalCount  int `json:"total_count"`
+    Items       []*Issue
+}
+
+type Issue struct {
+    Number      int
+    HTMLURL     string `json:"html_url"`
+    Title       string
+    State       string
+    User        *User
+    CreatedAt   time.Time `json:"created_at"`
+    Body        string
+}
+
+type User struct {
+    Login   string
+    HTMLURL string `json:"html_url"`
+}
+
+func daysAgo(t time.Time) int {
+    return int(time.Since(t).Hours() / 24)
+}
+
+func SearchIssues(terms []string)(*IssuesSearchResult,error) {
+    q := url.QueryEscape(strings.Join(terms," "))
+    resp,err := http.Get(IssuesURL + "?q=" + q)
+    if err != nil {
+        return nil,err
+    }
+
+    if resp.StatusCode != http.StatusOK {
+        resp.Body.Close()
+        return nil,fmt.Errorf("search query failed:%s",resp.Status)
+    }
+
+    var result IssuesSearchResult
+    if err := json.NewDecoder(resp.Body).Decode(&result);err != nil {
+        resp.Body.Close()
+        return nil,err
+    }
+
+    resp.Body.Close()
+    return &result,nil
+}
+
+func main() {
+    str := []string{"repo:golang/go is:open json decoder"}
+    if res,ok := SearchIssues(str);ok == nil {
+        err := mytmp.Execute(os.Stdout,res)
+        if err != nil {
+            log.Fatalf("execution: %s",err)
+        }
+    }
+}
+
+```
+
+```go
+var data struct {
+	A	string			//不受信任的纯文本
+	B	template.HTML	//受信任的HTML（在template/content.go中命名的字符串类型）
+}
+```
+- 以下形式的函数定义注意返回值括号变量名类型（直接声明了一个返回值变量类型）,可以直接返回(return必须)  
+
+```go
+func add(x int) (z int) {
+    z = x + x //此处z已经在返回值声明了，不能再声明为一个新的变量
+    return
+}
+```
+
+- go函数参数是`没有默认参数`的
+- func Sin(x float64) float64 //没有函数体，说明这个函数使用的GO以外的语言实现，这是声明定义了该函数的签名，此处Sin使用汇编语言实现
 
 ### 变量
 - `:=`省略var，左侧没有`声明新的变量`，产生编译错误（常用于初始化声明）
